test/tests/stages/8_loops/valid/for_decl.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[39]:
  int
  identifier(main)
  (
  void
  )
  {
  int
  identifier(a)
  =
  const int(0)
  ;
  for
  (
  int
  identifier(i)
  =
  -
  const int(100)
  ;
  identifier(i)
  <=
  const int(0)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  identifier(a)
  =
  identifier(a)
  +
  const int(1)
  ;
  return
  identifier(a)
  ;
  }
