test/tests/stages/8_loops/invalid_parse/invalid_for_declaration.lex
-- Lexing ... OK
+
+
@@ Tokens @@
List[25]:
  int
  identifier(main)
  (
  void
  )
  {
  for
  (
  ;
  int
  identifier(i)
  =
  const int(0)
  ;
  identifier(i)
  =
  identifier(i)
  +
  const int(1)
  )
  ;
  return
  const int(0)
  ;
  }
